# rs_ply_generator

./: CMakeLists.txt  README.md  global_registration.py  main.cpp  multiway_registration.pcd  ply_multiway_registration.py  ply_registration.py  ply_visualizer.py  rs_ply_generator.cpp  rs_ply_generator.hpp
segnet/: generator.py  inference.py  test.py  to_mask.txt
